updating cloud parameter

--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -12,6 +12,7 @@
 
        env:
          TF_ROOT: sample1
+         INFRACOST_ENABLE_CLOUD: true
          # If you're using Terraform Cloud/Enterprise and have variables stored on there
          # you can specify the following to automatically retrieve the variables:
          #   INFRACOST_TERRAFORM_CLOUD_TOKEN: ${{ secrets.TFC_TOKEN }}
