--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -47,7 +47,8 @@
            run: |
              infracost breakdown --path=${TF_ROOT} \
                                  --format=json \
-                                 --out-file=/tmp/infracost-base.json
+                                 --out-file=/tmp/infracost-base.json \
+                                 --project-name=sample1-breakdown
 
          # Checkout the current PR branch so we can create a diff.
          - name: Checkout PR branch
@@ -59,7 +60,8 @@
              infracost diff --path=${TF_ROOT} \
                             --format=json \
                             --compare-to=/tmp/infracost-base.json \
-                            --out-file=/tmp/infracost.json
+                            --out-file=/tmp/infracost.json \
+                            --project-name=sample1-diff
 
          # Posts a comment to the PR using the 'update' behavior.
          # This creates a single comment and updates it. The "quietest" option.
