--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -48,7 +48,7 @@
              infracost breakdown --path=${TF_ROOT} \
                                  --format=json \
                                  --out-file=/tmp/infracost-base.json \
-                                 --project-name=sample1-breakdown
+                                 --project-name=sample1
 
          # Checkout the current PR branch so we can create a diff.
          - name: Checkout PR branch
@@ -61,7 +61,7 @@
                             --format=json \
                             --compare-to=/tmp/infracost-base.json \
                             --out-file=/tmp/infracost.json \
-                            --project-name=sample1-diff
+                            --project-name=sample1
 
          # Posts a comment to the PR using the 'update' behavior.
          # This creates a single comment and updates it. The "quietest" option.
